replace Client with PACKAGE_TITLE

--- a/template/src/PackageStarter/PackageStarter_nuget.csproj
+++ b/template/src/PackageStarter/PackageStarter_nuget.csproj
@@ -31,10 +31,10 @@
   
   <ItemGroup>
     <!-- Dont include the client folder as part of packaging nuget build -->
-    <Content Remove="Client\**" />
+    <Content Remove="PACKAGE_TITLE\**" />
 
     <!-- However make the Umbraco-package.json included for dotnet pack or nuget package and visible to the solution -->
-    <None Include="Client\public\umbraco-package.json" Pack="false" />
+    <None Include="PACKAGE_TITLE\public\umbraco-package.json" Pack="false" />
   </ItemGroup>
   
   <ItemGroup>
